lab1/Test/L1-A-7-82.cmm
float U ( int nZMF2h8 ) {
  if ( myG3UbUD19 )   if ( MF3ikUCtX9 )   while ( 
    Y )   return RIb ;

else   ao_lPKy0aML = VPXYbwq5lnT77H || S > t1DGOMg4uT 
    / ! YFJpKvGoNu ( Su0cQEzeNAB2 , y && FhYR2xM1mWb8h 
    <= j6VaZE - ( hDBsEBpeLUal >= - ( Qn4_5eOAKhKX71RDBr 
    = cumoA1VUY != WYEZ7s5SHuFwXIc [ XOmy || _sQhLFsFDW0N 
    < ( BYUXx9Z2oYG8 || iaGgG8 == KQ7DA0zoTOs5YwmH3v ) 
    . hQc6TCZz0jZyB - - - ! q ] . sqVVvAlkV ) ) * ! DYTDngF9TQQYaJo4L 
    * - 1467296433.386406590 . CiJ1 [ 2057021124 + bYywsGlJ4ePZM 
    ( ) ] . aE7i6ja2QEbR ) ;


}
struct dX2xBK7QHN3NjSW8NlcV {
}lM_TlW4uNs , dN 

;
struct {
  struct oKdU4ZX uPdOq4g , iJ3o0Vbuhu = wuAJyYmN2U7n 
    ;
  struct V_vCS1nmiVtpk vOdHf_k5l1OIWfE \[ 726146227 
    ] ;
};
int ;
int lzrh0S9 ( ) {
{
    Sgf3X8 ;
    lriBmMkTTh7J70 ;
    VEpfz5TOJyKbLhK0f ;
{
&      YIQX77Oevffg ;
      Ce8ctwiEABqr6r2dXd2i ;
      cHPyUwbP ;
      if ( otZpcVT ) {
        FIi7qEUbFEBs ;
        if ( dWT )         D ;
else         if ( X47E )         AgMmaTxTn ;


        lu9Lwtq_J764Rf9TPrY ;
      }else       PIcUs8UH ;

    }    bTBiSM3r0r ;
    byMNLgyXnHrR ;
  }}
int cZvvWFADre8V ( int qCdU4KoU &, int qY6MJRqoFdUF 
  ) {
}
int ;
